compiler/tests/should-fail/InvalidProtocolAnnotation.via
/* InvalidProtocolAnnotationError */

host alice
host bob

fun main() {
    val a: int{bob}@Local(host = alice) = 42;
}
